k8s/overlays/foo/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  selector:
    matchLabels:
      app: foo-http-echo
  template:
    metadata:
      labels:
        app: foo-http-echo
    spec:
      containers:
        - name: http-echo
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  selector:
    app: foo-http-echo
